@@ -1,6 +1,7 @@
 1.3.2 2011-??-??
 ========
  * fix win32 build against win32 native gnu tools
+ * compatibility fix: fix segv on shutdown when ionCube Loader is loaded
 
 1.3.1 2010-11-27
 ========
